--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
         <img src="ash.jpg" alt="ash" width="1261" height="500" >
     </div>
     
-    <table align="center">
+    <table align="center" style="text-align:center;">
         <tr>
             <th>
         
